scss/style.scss
@import 'config';

* {
    font-family: $font-stack;
}

html {
    height: 100%; 
}

body {
    margin: 0;
    height: 100%;
}

.flex-container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .item-1 {
        display: flex;

        i {
            color: $dark-color;
            padding: 0 5px;
        }

        i:hover {
            color: $secondary-color;
        }
    }

    .item-2 {
        img {
            width: 100px;
            height: auto;
        }

        img:hover {
            cursor: pointer;
        }
    }

    .item-3 {
        visibility: hidden;
        padding-right: 25px;
    }
}

.flex-container-2 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 20px;

   
    a {
        text-decoration: none;
        color: $dark-color;
        font-weight: bold;
        padding: 0 10px;
        text-transform: uppercase;
    }

    a:hover {
        text-decoration: none;
        color: $secondary-color;
    }    
}

#home {
    background-color: lighten($secondary-color, 35%);
    margin: 0;
}

.flex-container-3 {
    padding: 30px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;

    .item-1 {
        width: 60%;

        a {
            text-decoration: none;
        }

        a:hover {
            transform: scale(0.95); 
        }

        h1 {
            font-size: 50px;
        }
    }

    .item-2 {
        width: 40%;

        img {
            width: 100%;
            height: auto;
        }
    }
}

#page-container {
    position: relative;
    min-height: 100vh;
  }
  
  #content-wrap {
    padding-bottom: 2.5rem;
  }
  
  #footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
    text-align: center;
    background-color: $dark-color;
    color: $light-color;
    display: inline;

   a {
    color: $primary-color;
    text-decoration: none;

    &:hover {
        opacity: 0.8;
    }
   }
}

#top-footer {
    padding: 10px 0;
    width: 100%;
    background-color: $primary-color;
    color: $light-color;
    text-align: center;

    #logo {
        width: 10%;
        height: auto;

        // &:hover {
        //     cursor: pointer;
        // }
    }

    #company-name {
        font-weight: bold;
    }

    a {
        color: $light-color;
        padding: 0px 5px;
        text-decoration: none;

        &:hover {
            opacity: 0.8;
        }
    }

    p {
        margin: 5px 0;
    }
}

#contact {
    text-align: center;

    h3 {
        color: $primary-color;
        text-transform: uppercase;
        letter-spacing: 0.5rem;
        line-height: 1.5rem;
    }

    hr {
        width: 40%;
    }

    .custom-list {
        list-style: none;
        padding: 0;
    }

    .custom-list li {
        margin: auto;
        padding: 0;
        text-align: center;
    }

    .custom-list li::before {
        content: "\2022";
        color: black;
        margin-right: 8px;
    }

    #inquiryForm {
        border-radius: 5px;
        border: 2px solid $primary-color;
        padding: 5px;
        max-width: 600px;
        margin: 10px auto;
        background-color: lighten($secondary-color, 45%);
        font-size: 16px;

        .flex-container-form {
            flex-direction: column;

            .label-and-input {
                text-align: center;
            }
        }
        
        #formTextArea {
            width: 50%;
            display: block;
            margin: 10px auto;
        }
        
        label, input {
            display: inline-block;

        }
        
        label {
            width: 50px;
            text-align: right;
        }
        
        .custom-input {
            all: unset;
            border: 2px solid grey;
            background: white;
            color: black;
            padding: 2px;
            border-radius: 2px;
            margin: 10px 0;
            width: 40%;
        }
        
        .error {
            display: none;
            font-size: 12px;
            color: red;
            width: 100%;
            text-align: center;
            margin: 0;
        }

        #resetButton {
            border-radius: 5px;
        }

    }
}

#testimonials {
    text-align: center;
    padding-bottom: 10px;

    hr {
        width: 40%;
    }

    .testimonial-cards {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-wrap: wrap;
        margin: 20px;

        .testimonial-card {
            position: relative;
            display: flex;
            justify-content: center;
            align-items: center;
            width: 300px;
            height: 480px;
            margin: 20px;
            background: darken($secondary-color, 50%);
            border-radius: 10px;

            .content {
                padding: 30px;
                text-align: center;

                .quote {
                    max-width: 60px;
                    height: auto;
                }

                p {
                    color: $light-color;
                    padding: 20px 0;
                }

                .user {
                    max-width: 80px;
                    border-radius: 50%;
                }

                h3 {
                    color: $primary-color;
                    text-transform: uppercase;
                    font-size: 16px;
                    letter-spacing: 1px;
                    font-weight: 600;

                }
            }
        }

        
    }  

    
}

#about {
    text-align: center;

    hr {
        width: 40%;
    }

    .personal-pic {
        width: 80%;
        border-radius: 30px;

    }

    .about-paragraph {
        padding: 0px 20px;
    }

    .content {
        padding-bottom: 10px;
    }
}

#services {
    text-align: center;

    hr {
        width: 40%;
    }

    .service-cards {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-wrap: wrap;
        margin: 20px;

        .service-card {
            position: relative;
            display: flex;
            justify-content: center;
            align-items: center;
            width: 280px;
            height: 350px;
            margin: 20px;
            background: darken($secondary-color, 50%);
            border-radius: 10px;

            .content {
                padding: 30px;
                text-align: center;

                .service {
                    max-width: 60px;
                    height: auto;
                }

                p {
                    color: $light-color;
                    padding: 20px 0;
                }

                .user {
                    max-width: 80px;
                    border-radius: 50%;
                }

                h3 {
                    color: $primary-color;
                    text-transform: uppercase;
                    font-size: 16px;
                    letter-spacing: 1px;
                    font-weight: 600;

                }
            }
        }

        
    }  
}




@import 'buttons';
@import 'mobile';
@import 'utilities';

